# v8-static

./: .travis.yml  Makefile  build  extra-toolchain-linux.gn  extra.gn
args/: arm-unknown-linux-gnueabi.args  arm-unknown-linux-gnueabihf.args  arm-unknown-linux-musleabi.args  arm-unknown-linux-musleabihf.args  armv7-unknown-linux-gnueabihf.args  armv7-unknown-linux-musleabihf.args  i686-apple-darwin.args  i686-unknown-linux-gnu.args  i686-unknown-linux-musl.args  x86_64-apple-darwin.args  x86_64-unknown-linux-gnu.args  x86_64-unknown-linux-musl.args
